# reflex

./: .gitignore  README.md  autoit.sh  sleigh.sh  subs2pdf.sh  tryone.py
ghidra/: Reflex.java
py/: reflex.py  setup.py  simplify.py  sleigh_fuzz.py
py/reflex/: fuzzer.py  re.py  reflex.py  simplify.py
py/reflex.egg-info/: PKG-INFO  SOURCES.txt
py/tests/: test_fuzz.py
rust-mutator/: Cargo.toml  make.sh  test.py
rust-mutator/src/: common.rs  lib.rs  main.rs
scala/: .gitignore  README.md  build.sbt  find-tables.sh  jreflex.sh
scala/src/main/scala/io/github/thebabush/reflex/: Counter.scala  DfaToRegex.scala  Generator.scala  MakeProto.scala  MakeRust.scala  Pretty.scala  Simple.scala  main.scala
scala/src/main/scala/io/github/thebabush/reflex/graph/: main.scala
scala/src/test/scala/: SimplificationTest.scala
