[package]
name = "rust-mutator"
version = "0.1.0"
authors = ["thebabush <paolo.montesel+gh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.0"
serde = "*"
serde_derive = "*"
rand = "*"
serde_json = "1.0"
libc = "*"

[lib]
name = "mutator"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "dump"
path = "src/main.rs"
